--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -19506,7 +19506,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>... Auf jeden Fall kamen {zombies} Zombies durch unsere Verteidigungen und griffen Bürger an!</source>
-        <target>... Auf jeden Fall kamen {zombies} Zombies durch unsere Verteidigungen und griffen Bürger an!</target>
+        <target>... however, {zombies} zombies made it through our defenses and pounced on the citizens!</target>
       </segment>
     </unit>
     <unit id="0FSEa0F">
@@ -22652,7 +22652,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Von den Verteidigungsanlagen der Stadt aufgehalten, gingen eure ehemaligen Mitbürger mit leeren Händen und mampften stattdessen die Überreste ihrer eigenen verrottenden Gliedmaßen.</source>
-        <target>Von den Verteidigungsanlagen der Stadt aufgehalten, gingen eure ehemaligen Mitbürger mit leeren Händen und mampften stattdessen die Überreste ihrer eigenen verrottenden Gliedmaßen.</target>
+        <target>Stopped by the town's defences, your ex-cohabitants left empty-handed and gnawing on each other's putrified carcasses.</target>
       </segment>
     </unit>
     <unit id="mJl9hp7" name="{points} Punkt(e)">
