Added dead ghoul description (EN)

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -9520,7 +9520,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Plötzlich sackt {citizen} in sich zusammen, seine Augen drehen sich nach hinten, und mit einem schauerhaften Gurgeln löst sich sein ganzer Körper vor deinen Augen auf und hinterlässt nur den üblen Geruch von Tod und Verwesung! Es gibt keinen Zweifel mehr: {citizen} war ein Ghul!!</source>
-        <target>Unexpectedly, {citizen} collapsed with a ungodly gurgle, their eyes rolling back in their head... Their body is literally decomposing in places and the smell of death fills the air! The horrible truth slaps you in the face: {citizen} was a Ghoul!!</target>
+        <target><![CDATA[Unexpectedly, {citizen} collapsed with a ungodly gurgle, their eyes rolling back in their head... Their body is literally decomposing in places and the smell of death fills the air! The horrible truth slaps you in the face: <strong>{citizen} was a Ghoul!</strong>]]></target>
       </segment>
     </unit>
     <unit id="9goEXWW">
@@ -22141,7 +22141,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Die offensichtlichen Spuren zeigen, dass {user} die Grenzen zum Wahnsinn überschritten haben muss: abgenagte Knochen, zerfetzte menschliche Gliedmaßen, halb aufgegessene Tierreste... Sein ehemaliges Zuhause ist ein veritables stinkendes Massengrab, das keinen Zweifel zulässt: &lt;strong&gt;{user} war ein Ghoul&lt;/strong&gt;!</source>
-        <target><![CDATA[Die offensichtlichen Spuren zeigen, dass {user} die Grenzen zum Wahnsinn überschritten haben muss: abgenagte Knochen, zerfetzte menschliche Gliedmaßen, halb aufgegessene Tierreste... Sein ehemaliges Zuhause ist ein veritables stinkendes Massengrab, das keinen Zweifel zulässt: <strong>{user} war ein Ghoul</strong>!]]></target>
+        <target><![CDATA[More obvious clues could not be left. {user} had definitely crossed the boundaries of crazy: gnawed bones, shredded human entrails, half-eaten animal remains... Their old house is a rancid mass grave that leaves us in no doubt: {user} was a ghoul!]]></target>
       </segment>
     </unit>
     <unit id="rUnZoOv">
