--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9488,5 +9488,16 @@
         <target>Esta acción ya fue utilizada en esta partida.</target>
       </segment>
     </unit>
+    <unit id="S0O43SY">
+      <notes>
+        <note category="german">&lt;nt-morphed&gt;Gute Nachrichten: Es ist noch Wasser im Kanister!&lt;/nt-morphed&gt;&lt;t-morphed&gt;&lt;strong&gt;Der Kanister ist LEER&lt;/strong&gt;!&lt;/t-morphed&gt;</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>&lt;nt-morphed&gt;Gute Nachrichten: Es ist noch Wasser im Kanister!&lt;/nt-morphed&gt;&lt;t-morphed&gt;&lt;strong&gt;Der Kanister ist LEER&lt;/strong&gt;!&lt;/t-morphed&gt;</source>
+        <target><![CDATA[<nt-morphed>Buena noticia, ¡el bidón aún contiene agua!</nt-morphed><t-morphed><strong>El bidón está VACÍO</strong> !</t-morphed>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
